--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
     .footer-links a:hover {
       text-decoration: underline;
     }
+
+    /* ---- Mobile styles ---- */
+    @media (max-width: 768px) {
+      body {
+        align-items: flex-start;
+        padding-top: 40px;
+      }
+
+      .login-container {
+        border: none;
+        box-shadow: none;
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -144,7 +158,7 @@
 
       <button type="button" onclick="showError()">Next</button>
       <div id="error" class="error-message">
-        Account Blocked Contact support <a href="tel:+18888888888">+1-888-888-8888</a>
+        Contact support <a href="tel:+18888888888">+1-888-888-8888</a>
       </div>
 
       <button type="submit" class="signup-btn">Sign up</button>
